Astroid CalC 1st Commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Astro Weight Calculator</title>
+    <link rel="stylesheet" href="STYLE.CSS"/>
   </head>
   <body>
      <!-- Write your markup here  -->
+    <h1>'Astro-weight Calculator</h1> 
+    <h2>Calculate your weight</h2>
+     <input id="user-weight" type="text" placeholder="Weight (lbs)" />
+<select id="planets" >
+  <option value="Pluto">Pluto</option>
+  <option value="Neptune">Neptune</option>
+  <option value="Uranus">Uranus</option>
+  <option value="Saturn">Saturn</option>
+  <option value="Jupiter">Jupiter</option>
+  <option value="Mars">Mars</option>
+  <option value="Moon">Moon</option>
+  <option value="Earth">Earth</option>
+  <option value="Venus">Venus</option>
+  <option value="Mercury">Mercury</option>
+  <option value="Sun">Sun</option>
+</select>
+<p id="output"></p>
+<button id="calculate-button" type="button">"calculate"</button>
 
     <script src="main.js" charset="utf-8"></script>
   </body>
